[tool.poetry]
name = "demo-blogs"
version = "0.1.0"
description = ""
authors = ["Mkupr <mkupr@outlook.com>"]
readme = "README.md"
packages = [{include = "demo_blogs"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
